2007-04-25  David Hyatt  <hyatt@apple.com>

        Fix for bug 13373, make sure to invalidate the pref widths for objects
        with percentage padding.

        Reviewed by beth

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlockChildren):
        (WebCore::RenderBlock::layoutPositionedObjects):
        * rendering/bidi.cpp:
        (WebCore::RenderBlock::layoutInlineChildren):

2007-04-25  David Harrison  <harrison@apple.com>

        Comment change. Correct the header name in the endif comment.
        
        * editing/FormatBlockCommand.h:
        Change InsertListCommand_h to FormatBlockCommand_h.

2007-04-25  Darin Adler  <darin@apple.com>

        Reviewed by Hyatt.

        * platform/AtomicString.cpp: (WebCore::AtomicString::add):
        Removed unnecessary use of strlen to check if a string is empty.

2007-04-25  Mitz Pettel  <mitz@webkit.org>

        Build fix.

        * rendering/RenderListMarker.h: Undeleted the m_text member.

2007-04-25  David Hyatt  <hyatt@apple.com>

        Rearchitect calcPrefWidths.  The calculation is now done lazily only when minPrefWidth
        or maxPrefWidth are asked for.  The result of the calculation is cached.

        The new invalidation scheme for pref width invalidation follows the
        containing block hierarchy and knows to halt at positioned objects, since
        they cannot influence the size of their containers.

        Reviewed by darin

        * css/cssstyleselector.cpp:
        (WebCore::CSSStyleSelector::init):
        (WebCore::CSSStyleSelector::initForStyleResolve):
        * page/FrameView.cpp:
        (WebCore::FrameView::layout):
        * rendering/RenderApplet.cpp:
        (WebCore::RenderApplet::layout):
        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::makeChildrenNonInline):
        (WebCore::RenderBlock::removeChild):
        (WebCore::RenderBlock::layout):
        (WebCore::RenderBlock::layoutBlock):