@@ -1,3 +1,12 @@
+2007-04-25  Stephanie Lewis <slewis@apple.com>
+
+        Reviewed by Darin.
+
+        Fix the build for platforms that overload the abs function.        
+
+        * dom/ChildNodeList.cpp:
+        (WebCore::ChildNodeList::item):
+
 2007-04-25  David Hyatt  <hyatt@apple.com>
 
         Fix for bug 13373, make sure to invalidate the pref widths for objects
